--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,12 +12,54 @@
 
 ## 2022.8
 
-### 2022.8.15(...)
+### 2022.8.16(...)
+【题】给定整数  $n \geq 1$ .
+
+$(i)$ 试证明
+
+$x^{n}+x^{n-1}+\cdots+x-1=0$,有一正根.设其为 $a_{n}$ . 
+且证明 $a_{n} \leq 1$ 
+
+$(ii)$ 证明  $\left(a_{n}\right)_{n \geq 1}$ 递减.
+
+$(iii)$ 证明$a_{n}^{n+1}-2 a_{n}+1=0$,且 $\displaystyle\lim _{n \rightarrow \infty} a_{n}=1 / 2$ .
+
+$(iv)$ 试证明$a_{n}=\frac{1}{2}+\frac{1}{4 \cdot 2^{n}}+o\left(\frac{1}{2^{n}}\right) ,n \rightarrow \infty .\blacktriangleright$
+
+（159）
+
+---
+
+### 2022.8.15
 【题】 设 $f, g: \mathbb{R} \rightarrow \mathbb{R}$ 周期分别为 $a$  ,  $b$ . 且 $\displaystyle\lim _{x \rightarrow 0} f(x) / x=u \in \mathbb{R}$  ,  $\displaystyle\lim _{x \rightarrow 0} g(x) / x=v \in \mathbb{R} \backslash\{0\}$. 
 
 试求
 
-$\displaystyle\lim _{n \rightarrow \infty} \frac{f\left((3+\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b\right)}$
+$\displaystyle\lim _{n \rightarrow \infty} \frac{f\left((3+\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b\right)}.\blacktriangleright$
+
+$\blacktriangleleft$
+
+我们有
+
+$\frac{f\left((3+\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b\right)}=\frac{f\left((3+\sqrt{7})^{n} a+(3-\sqrt{7})^{n} a-(3-\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b+(2-\sqrt{2})^{n} b-(2-\sqrt{2})^{n} b\right)} .$
+
+注意到 
+
+$(3+\sqrt{7})^{n}+(3-\sqrt{7})^{n} \in \mathbb{Z}$ ，  $(2+\sqrt{2})^{n}+(2-\sqrt{2})^{n} \in \mathbb{Z}$ . 
+
+从而
+
+$\frac{f\left((3+\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b\right)}=\frac{f\left(-(3-\sqrt{7})^{n} a\right)}{g\left(-(2-\sqrt{2})^{n} b\right)}, \quad \forall n \geq 1 .$
+
+于是
+
+$\begin{aligned}
+\lim _{n \rightarrow \infty} & \frac{f\left((3+\sqrt{7})^{n} a\right)}{g\left((2+\sqrt{2})^{n} b\right)} \\
+&=\frac{a}{b} \cdot \lim _{n \rightarrow \infty}\left\{\frac{f\left(-(3-\sqrt{7})^{n} a\right)}{-(3-\sqrt{7})^{n} a} \cdot \frac{-(2-\sqrt{2})^{n} b}{g\left(-(2-\sqrt{2})^{n} b\right)} \cdot \frac{(3-\sqrt{7})^{n}}{(2-\sqrt{2})^{n}}\right\} .
+\end{aligned}$
+
+即得所求极限为 $0$ $.\blacksquare$
+
 
 
 ---
