--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,7 +12,24 @@
 
 ## 2022.8
 
-### 2022.8.16(...)
+### 2022.8.17(...)
+【题】$\mathbf{(Kolmogorov's Inequality)}$.
+
+设$f: \mathbb{R} \rightarrow \mathbb{R}$  为 $C^{3}$ . 且  $f$  和  $f^{\prime \prime \prime}$ 都有界. 
+
+设$M_{0}=\displaystyle\sup _{x \in \mathbb{R}}|f(x)|, \quad M_{3}=\sup _{x \in \mathbb{R}}\left|f^{\prime \prime \prime}(x)\right|$.
+
+$(a)$ 证明  $f^{\prime}$ 有界，且
+
+$\displaystyle\sup _{x \in \mathbb{R}}\left|f^{\prime}(x)\right| \leq \frac{1}{2}\left(9 M_{0}^{2} M_{3}\right)^{1 / 3}$ .
+
+$(b)$   $f^{\prime \prime}$ 是否也有界？$\blacktriangleright$ 
+
+(240)
+
+---
+
+### 2022.8.16
 【题】给定整数  $n \geq 1$ .
 
 $(i)$ 试证明
@@ -26,7 +43,37 @@ $(iii)$ 证明$a_{n}^{n+1}-2 a_{n}+1=0$,且 $\displaystyle\lim _{n \rightarrow \
 
 $(iv)$ 试证明$a_{n}=\frac{1}{2}+\frac{1}{4 \cdot 2^{n}}+o\left(\frac{1}{2^{n}}\right) ,n \rightarrow \infty .\blacktriangleright$
 
-（159）
+$\blacktriangleleft$
+
+$(i)$ 设 $f_{n}(x)=x^{n}+x^{n-1}+\cdots+x-1$ .则 $f_{n}$ 是连续的,  $f_{n}(0)=-1$ ,   $f_{n}(1)=n-1 \geq 0$ .
+
+由介值性知, 存在  $a_{n} \in   (0,1]$  使得 $f_{n}\left(a_{n}\right)=0$ . 由于 $f_{n}$  在  $[0, \infty)$上严格递增 ,故只有唯一解  $a_{n}$ .
+
+$(ii)$我们有 $f_{n}\left(a_{n+1}\right)=-a_{n+1}^{n+1}<0$ .
+
+由于 $f_{n}$  是递增的  ，且  $0=f_{n}\left(a_{n}\right)>f_{n}\left(a_{n+1}\right)$ , 故  $a_{n}>a_{n+1}$ .
+
+$(iii)$注意到
+
+$(x-1)\left(x^{n}+x^{n-1}+\cdots+x-1\right)=x^{n+1}-2 x+1$ .
+
+即 $a_{n}^{n+1}-2 a_{n}+1=0$ . 
+
+于是
+
+$0<a_{n}-\frac{1}{2}=\frac{a_{n}^{n+1}}{2}<\frac{a_{2}^{n+1}}{2} \rightarrow 0 , n \rightarrow \infty.$
+
+故 $\displaystyle\lim _{n \rightarrow \infty} a_{n}=1 / 2$ .
+
+$(iv)$ 设  $b_{n}=a_{n}-1 / 2$ . 则 $\ln \left(2 b_{n}\right)=(n+1) \ln a_{n}$ . 又 $\ln a_{n}=-\ln 2+\ln \left(1+2 b_{n}\right)$  ，且  $\ln \left(1+2 b_{n}\right) \sim 2 b_{n}=o(1 / n)$ . 
+
+因此
+
+$\begin{array}{l}
+\ln \left(2 b_{n}\right)=-(n+1) \ln 2+o(1) , n \rightarrow \infty, \\
+a_{n}=\frac{1}{2}+\frac{1}{4 \cdot 2^{n}}+o\left(\frac{1}{2^{n}}\right) ,n \rightarrow \infty .
+\end{array}.\blacksquare$
+
 
 ---
 
