--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,7 +12,13 @@
 
 ## 2022.8
 
-### 2022.8.17(...)
+### 2022.8.18(...)
+【题】比大小：$\tan (\sin x)$ 和 $\sin (\tan x)$,$x \in(0, \pi / 2).\blacktriangleright$ 
+
+
+---
+
+### 2022.8.17
 【题】$\mathbf{(Kolmogorov's Inequality)}$.
 
 设$f: \mathbb{R} \rightarrow \mathbb{R}$  为 $C^{3}$ . 且  $f$  和  $f^{\prime \prime \prime}$ 都有界. 
@@ -25,7 +31,37 @@ $\displaystyle\sup _{x \in \mathbb{R}}\left|f^{\prime}(x)\right| \leq \frac{1}{2
 
 $(b)$   $f^{\prime \prime}$ 是否也有界？$\blacktriangleright$ 
 
-(240)
+$(a)$ 固定  $x \in \mathbb{R}$  ,  $h \neq 0$ . 
+
+由泰勒公式，
+
+$\left|f(x+h)-f(x)-h f^{\prime}(x)-\frac{h^{2}}{2} f^{\prime \prime}(x)\right| \leq M_{3} \frac{h^{3}}{6}$,
+
+
+
+$\left|f(x-h)-f(x)+h f^{\prime}(x)-\frac{h^{2}}{2} f^{\prime \prime}(x)\right| \leq M_{3} \frac{h^{3}}{6} .$
+
+因此
+
+$\begin{aligned}
+2 h\left|f^{\prime}(x)\right|=& \mid\left(f(x-h)-f(x)+h f^{\prime}(x)-\frac{h^{2}}{2} f^{\prime \prime}(x)\right) \\
+&-\left(f(x+h)-f(x)-h f^{\prime}(x)-\frac{h^{2}}{2} f^{\prime \prime}(x)\right)+f(x+h)-f(x-h) \mid \\
+\leq &\left|f(x-h)-f(x)+h f^{\prime}(x)-\frac{h^{2}}{2} f^{\prime \prime}(x)\right| \\
+&+\left|f(x+h)-f(x)-h f^{\prime}(x)-\frac{h^{2}}{2} f^{\prime \prime}(x)\right|+|f(x+h)|+|f(x-h)| \\
+=& \frac{M_{3} h^{3}}{3}+2 M_{0} .
+\end{aligned}$
+
+故
+
+$\left|f^{\prime}(x)\right| \leq \frac{M_{0}}{h}+\frac{M_{3} h^{2}}{6}=: \psi(h) .$
+
+注意到$\psi^{\prime}(h)=-\frac{M_{0}}{h^{2}}+\frac{M_{3} h}{3}$ , 
+故有最小值时  $h_{0}=\left(3 M_{0} M_{3}^{-1}\right)^{1 / 3}$ . 
+此时$\psi(h)=2^{-1}\left(9 M_{0}^{2} M_{3}\right)^{1 / 3}$ , 结论成立。
+
+$(b)$ 由假设和命题 $(a)$,  $f^{\prime}$ ,  $f^{\prime \prime \prime}=\left(f^{\prime}\right)^{\prime \prime}$  均有界. 
+
+由 $\mathbf{Landau's inequality}$ ,我们可以推断出 $f^{\prime \prime}$ 是有界的。$\blacksquare$
 
 ---
 
