--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,9 +12,108 @@
 
 ## 2022.8
 
-### 2022.8.18(...)
+### 2022.8.21(...)
+【题】试求积分
+
+$\int \frac{1}{x \sqrt{x^{2 a}+x^{a}+1}} d x, \quad x>0,a>0.\blacktriangleright$
+
+(318)
+
+---
+
+### 2022.8.20
+【题】试证明  $\forall x \in(0,1)$ ,$\frac{2}{\pi}\left(\sin \frac{\pi x}{2}\right) \arcsin x<x^{2}<(\sin x) \arcsin x.\blacktriangleright$
+
+$\blacktriangleleft$
+
+第一个不等式即$f(x) f^{-1}(y) \leq x y$的特例,
+
+这里 $x>0, y \geq f(x)$ ,正函数$f$ 满足 $f(x) / x$  递增. 
+
+第一个不等式只需注意到
+$\frac{f(x)}{x} \leq \frac{f(z)}{z} , z=f^{-1}(y) \geq x$，则不难得证。
+
+第二个不等式即$f(x) f^{-1}(y) \geq x y$的特例,
+
+这里 $x, y>0, y \leq f(x)$ , 函数 $f$ 满足 $f(x) / x$  递增. 
+
+只需注意到$\frac{f(x)}{x} \geq \frac{f(z)}{z} \quad \text { for } z=f^{-1}(y) \leq x$ 即可.
+
+为了得到原题不等式, 令 $f(x)=\arcsin x ,  x \in(0,1)$即可 .
+
+下面给出其他一些例子
+
+$\begin{array}{rlr}
+\left(\mathrm{e}^{x}-1\right) \ln (1+x) & >x^{2} & \text { for } x>0, \\
+(\tan x) \arctan x & >x^{2} & \text { for } x \in(0, \pi / 2), \\
+{\left[(1+x)^{p}-1\right]\left[(1+x)^{1 / p-1}-1\right]} & >x^{2} & \text { for } x>0 \text { and } p>0, p \neq 1, \\
+{\left[(1-x)^{p}-1\right]\left[1-(1+x)^{1 / p}\right]} & >x^{2} & \text { for } x \in(0,1) \text { and } p<-1 .
+\end{array}$
+
+
+---
+
+### 2022.8.19
+【题】证明数列  $\left(a_{n}\right)_{n \geq 1}$  :$a_{n}=\left(1+\frac{1}{n}\right)^{n+p}$是递减的当且仅当  $p \geq 1 / 2.\blacktriangleright$  
+
+$\blacktriangleleft$
+
+$\forall  x \in(-1,1)$ , 我们有$\ln \frac{1+x}{1-x}=2 x\left(1+\frac{x^{2}}{3}+\frac{x^{4}}{5}+\cdots\right)$.
+
+置 $x=(2 n+1)^{-1}$ , 则有
+
+$\ln \frac{n+1}{n}=\frac{2}{2 n+1}\left[1+\frac{1}{3(2 n+1)^{2}}+\frac{1}{5(2 n+1)^{4}}+\cdots\right]$ .
+
+于是
+
+$\begin{aligned}
+\ln a_{n} &=\frac{2(n+p)}{2 n+1}\left[1+\frac{1}{3(2 n+1)^{2}}+\frac{1}{5(2 n+1)^{4}}+\cdots\right] \\
+&=1+\frac{p-\frac{1}{2}}{n+\frac{1}{2}}\left[1+\frac{1}{3(2 n+1)^{2}}+\frac{1}{5(2 n+1)^{4}}+\cdots\right] .
+\end{aligned}$
+
+这表明当$p \geq 1 / 2$ ,   $\left(a_{n}\right)_{n \geq 1}$是递减的.
+
+此外
+
+$\ln a_{n+1}-\ln a_{n}=\frac{\frac{1}{2}-p}{\left(n+\frac{1}{2}\right)\left(n+\frac{3}{2}\right)}+O\left(n^{-3}\right) , n \rightarrow \infty .$
+
+于是$p<1 / 2$，且$n$充分大时， $a_{n}$ 是递增的 $.\blacksquare$ 
+
+---
+
+### 2022.8.18
 【题】比大小：$\tan (\sin x)$ 和 $\sin (\tan x)$,$x \in(0, \pi / 2).\blacktriangleright$ 
 
+$\blacktriangleleft$
+
+设 $f(x)=\tan (\sin x)-\sin (\tan x)$ .  则有
+
+
+$\begin{aligned}
+f^{\prime}(x) &=\frac{\cos x}{\cos ^{2}(\sin x)}-\frac{\cos (\tan x)}{\cos ^{2} x} \\
+&=\frac{\cos ^{3} x-\cos (\tan x) \cdot \cos ^{2}(\sin x)}{\cos ^{2} x \cdot \cos ^{2}(\tan x)} .
+\end{aligned}$
+
+对于 $0<x<\arctan \frac{\pi}{2}$ ，由$\cos x$ 在 $\left(0, \frac{\pi}{2}\right)$ 的凹凸性知
+
+$\begin{aligned}
+\sqrt[3]{\cos (\tan x) \cdot \cos ^{2}(\sin x)} &<\frac{1}{3}[\cos (\tan x)+2 \cos (\sin x)] \\
+& \leq \cos \left[\frac{\tan x+2 \sin x}{3}\right]<\cos x
+\end{aligned}$
+
+其中最后一个不等号是因为
+
+$\left[\frac{\tan x+2 \sin x}{3}\right]^{\prime}=\frac{1}{3}\left[\frac{1}{\cos ^{2} x}+2 \cos x\right] \geq \sqrt[3]{\frac{1}{\cos ^{2} x} \cdot \cos x \cdot \cos x}=1$
+
+于是  $\cos ^{3} x-\cos (\tan x) \cdot \cos ^{2}(\sin x)>0$ , 即  $f^{\prime}(x)>0$ .
+
+因此，$f$ 在 $[0, \arctan \pi / 2]$是递增的.  
+
+最后注意到
+
+$\tan \left[\sin \left(\arctan \frac{\pi}{2}\right)\right]=\tan \frac{\pi / 2}{\sqrt{1+\pi^{2} / 4}}>\tan \frac{\pi}{4}=1$
+
+这表明如果 $x \in \left[\arctan \frac{\pi}{2}, \frac{\pi}{2}\right]$ 则 $\tan (\sin x)>1\geq\sin(\tan x)$  ，即 $f(x)>0.\blacksquare$ 
 
 ---
 
@@ -30,6 +129,8 @@ $(a)$ 证明  $f^{\prime}$ 有界，且
 $\displaystyle\sup _{x \in \mathbb{R}}\left|f^{\prime}(x)\right| \leq \frac{1}{2}\left(9 M_{0}^{2} M_{3}\right)^{1 / 3}$ .
 
 $(b)$   $f^{\prime \prime}$ 是否也有界？$\blacktriangleright$ 
+
+$\blacktriangleleft$
 
 $(a)$ 固定  $x \in \mathbb{R}$  ,  $h \neq 0$ . 
 
