--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,12 +12,33 @@
 
 ## 2022.8
 
-### 2022.8.21(...)
+### 2022.8.22(...)
+【题】设实数列$\left(a_{n}\right)_{n \geq 1}$  收敛至 $0$ , 函数 $f: \mathbb{R} \rightarrow \mathbb{R}$ 有原函数且满足 $f\left(x+a_{n}\right)=f(x) ,  x \in \mathbb{R}$ , $n \geq 1$ . 证明  $f$  是常数$.\blacktriangleright$
+
+
+(322)
+
+
+---
+
+### 2022.8.21
 【题】试求积分
 
 $\int \frac{1}{x \sqrt{x^{2 a}+x^{a}+1}} d x, \quad x>0,a>0.\blacktriangleright$
 
-(318)
+$\blacktriangleleft$
+
+变换积分为
+
+$\int \frac{1}{x^{a+1} \sqrt{1+\frac{1}{x^{a}}+\frac{1}{x^{2 a}}}} d x=\int \frac{1}{\sqrt{\left(\frac{1}{x^{a}}+\frac{1}{2}\right)^{2}+\frac{3}{4}}} \cdot \frac{1}{x^{a+1}} d x$
+
+换元  $t=1 / x^{a}+1 / 2$  则有
+
+$\begin{aligned}
+-\frac{1}{a} \int \frac{1}{\sqrt{t^{2}+\frac{3}{4}}} d x &=-\frac{1}{a} \ln \left(t+\sqrt{t^{2}+\frac{3}{4}}\right)+C \\
+&=-\frac{1}{a} \ln \left(\frac{1}{x^{a}}+\frac{1}{2}+\sqrt{1+\frac{1}{x^{a}}+\frac{1}{x^{2 a}}}\right)+C .\blacksquare
+\end{aligned}$  
+
 
 ---
 
@@ -50,6 +71,7 @@ $\begin{array}{rlr}
 {\left[(1-x)^{p}-1\right]\left[1-(1+x)^{1 / p}\right]} & >x^{2} & \text { for } x \in(0,1) \text { and } p<-1 .
 \end{array}$
 
+$\blacksquare$
 
 ---
 
