--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -3,7 +3,7 @@
 # 每日一题（数竞）
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
@@ -12,15 +12,75 @@
 
 ## 2022.8
 
-### 2022.8.22(...)
-【题】设实数列$\left(a_{n}\right)_{n \geq 1}$  收敛至 $0$ , 函数 $f: \mathbb{R} \rightarrow \mathbb{R}$ 有原函数且满足 $f\left(x+a_{n}\right)=f(x) ,  x \in \mathbb{R}$ , $n \geq 1$ . 证明  $f$  是常数$.\blacktriangleright$
+### 2022.8.24(...)
+【题】（1995国际大学生数学竞赛试题）
+求极限$\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln n·\ln (n-k)}.\blacktriangleright$
 
-
-(322)
 
 
 ---
 
+
+### 2022.8.23  (325)
+【题】 函数$f$称为P-函数如果其是可微的且满足$f$: $\mathbb{R} \rightarrow \mathbb{R}$  ，有连续导函数  $f^{\prime}$  ,  $x \in \mathbb{R}$,满足  $f\left(x+f^{\prime}(x)\right)=f(x)$ , $x  \in  \mathbb{R}$ .
+
+$(i)$证明 P-函数的导数至少有一个零点.
+
+$(ii)$试举出一个非常数的P-函数.
+
+$(iii)$ 证明如果一个P-函数的导数有至少两个不同的零点，则其是常数函数.$\blacktriangleright$ 
+
+$\blacktriangleleft$
+
+$(i)$ If  $f$  is a  P -function, and  $f^{\prime}(x) \neq 0$  for some $x \in \mathbb{R}$ , the mean value theorem shows that  $f^{\prime}$  vanishes at some point  $\xi$  between  $x$  and  $x+f^{\prime}(x): 0=f(x+   \left.f^{\prime}(x)\right)-f(x)=f^{\prime}(x) f^{\prime}(\xi)$ 
+
+$(ii)$ Try a nonconstant polynomial function  $f$ . Identification of coefficients forces  $f(x)=-x^{2}+p x+q$ , where  $p$  and  $q$  are two arbitrarily fixed real numbers. This is not at all accidental. As shown in the comment that follows the solution, every nonconstant  P -function whose derivative vanishes at a single point is of this form.
+
+$(iii)$ Let  $f$  be a  P -function. By $(i)$, the set  $Z=\left\{x: x \in \mathbb{R}\right.  and  \left.f^{\prime}(x)=0\right\}$  has at least one element. We now show that if it has more than one element, then it must be all of  $\mathbb{R}$ . The conclusion will follow. The proof is broken into three steps.
+
+STEP 1. If  $f^{\prime}$  vanishes at some point  $a$ , then  $f^{\prime}(x) \geq 0$  for  $x \leq a$ , and  $f^{\prime}(x) \leq 0$  for  $x \geq a$ . The argument is essentially the same in both cases, so we deal only with the first one. We argue by reductio ad absurdum. Suppose  $f^{\prime}\left(x_{0}\right)<0$  for some  $x_{0}<a$  and let  $\alpha=\inf \left\{x: x>x_{0}\right.  and  \left.f^{\prime}(x)=0\right\}$ ; clearly, this infimum exists. By continuity of  $f^{\prime}, f^{\prime}(\alpha)=0$  and  $f^{\prime}(x)<0$  for  $x_{0}<x<\alpha$ ; in particular,  $f$  is strictly monotonic (decreasing) on  $\left(x_{0}, \alpha\right)$ . Consider further the continuous real-valued function  $g: x \mapsto x+f^{\prime}(x), x \in \mathbb{R}$ , and note that  $g(x)<x$  for  $x_{0}<x<\alpha$ , and  $g(\alpha)=\alpha$ . Since  $g(\alpha)=\alpha>x_{0}$  and  $g$  is continuous,  $g(x)>x_{0}$  for  $x$  in  $\left(x_{0}, \alpha\right)$ , sufficiently close to  $\alpha$ . Consequently, for any such  $x$, $x_{0}<g(x)<   x<\alpha$ , and  $f(g(x))=f(x)$ , which contradicts the strict monotonicity of  $f$  on  $(x, \alpha)$ 
+
+STEP 2. If  $f'$  vanishes at two points  $a$  and  $b$, $a<b$ , then  $f$  is constant on  $[a, b]$ . By Step  1, $f^{\prime}(x) \geq 0$  for  $x \leq b$  and  $f^{\prime}(x) \leq 0$  for  $x \geq a$ , so  $f^{\prime}$  vanishes identically on  $[a, b]$ . Consequently,  $f$  is constant on  $[a, b]$ .
+We are now in a position to conclude the proof.
+
+STEP 3. If the set  $Z=\left\{x: x \in \mathbb{R}\right.  and  \left.f^{\prime}(x)=0\right\}$  has more than one element, then  $Z$  is all of  $\mathbb{R}$ . By Step  2, $Z$  is a nondegenerate interval, and  $f$  is constant on  $Z: f(x)=c$  for all  $x$  in  $Z$ . We show that  $\alpha=\inf Z=-\infty$  and  $\beta=\sup Z=+\infty$ . Suppose, if possible, that  $\alpha>-\infty$ . Then  $\alpha$  is a member of  $Z$ , by continuity of  $f^{\prime}$ . Recall the function  $g$  from Step 1. By Step 1,  $f^{\prime}(x)>0$  for  $x<\alpha$ , so  $g(x)>x$ ,  $f(x)$  is strictly monotonic (increasing), and  $f(x)<c$  for  $x<\alpha$ . Since  $f(x)$  is strictly monotonic for  $x<\alpha$ , the conditions  $f(g(x))=f(x)$  and  $g(x)>x$  force  $x<\alpha<g(x)$ . Since  $g(\alpha)=\alpha<\beta$ , and  $g$  is continuous, it follows that  $g(x)<\beta$  for  $x<\alpha$ , sufficiently close to  $\alpha$ . Finally, take any such  $x$  and recall that  $Z$  is an interval to conclude that  $g(x) \in Z$ , so  $f(x)=f(g(x))=c$ , in contradiction to  $f(x)<c$  established above. Consequently,  $\alpha=-\infty$ . A similar argument shows that  $\beta=+\infty.\blacksquare$ 
+
+The antiderivative test for series, which we now state and prove, follows from the mean value theorem and the fact that a series of positive terms converges if and only if its sequence of partial sums is bounded above.
+
+---
+
+### 2022.8.22
+【题】设实数列$\left(a_{n}\right)_{n \geq 1}$  收敛至 $0$ , 函数 $f: \mathbb{R} \rightarrow \mathbb{R}$ 有原函数且满足 $f\left(x+a_{n}\right)=f(x) ,  x \in \mathbb{R}$ , $n \geq 1$ . 证明  $f$  是常数$.\blacktriangleright$
+
+$\blacktriangleleft$
+
+设 $F$  为 $f$的原函数 . 则存在常数  $C$  使得  $F\left(x+a_{n}\right)-F(x) \equiv C$ .
+
+对任意 $a \in \mathbb{R}$ ，存在整数列  $\left(b_{n}\right)$  使得 $\displaystyle\lim _{n \rightarrow \infty} a_{n} b_{n}=a$ . 
+
+如果  $b_{n}$  为 $a / a_{n}$的整数部分 , 则$a=a_{n} b_{n}+r_{n}$ ,  $0 \leq r_{n}<a_{n}$ . 由此在我们的假设中使  $r_{n} \rightarrow 0$  ,我们有 $a_{n} b_{n} \rightarrow a$ .固定一实数 $x_{0}$ . 我们有
+
+$\begin{aligned}
+F\left(x_{0}+a_{n} b_{n}\right)-F\left(x_{0}\right)=& F\left(x_{0}+b_{n} a_{n}\right)-F\left(x_{0}+\left(b_{n}-1\right) a_{n}\right)+\cdots+F\left(x_{0}+a_{n}\right) \\
+&-F\left(x_{0}\right) \\
+=& b_{n}\left[F\left(x_{0}+a_{n}\right)-F\left(x_{0}\right)\right] \\
+=& a_{n} b_{n} \frac{F\left(x_{0}+a_{n}\right)-F\left(x_{0}\right)}{a_{n}}
+\end{aligned}$
+
+由于 $F$ 是可微的, 我们有  $n \rightarrow \infty$ ,
+
+$F\left(x_{0}+a\right)-F\left(x_{0}\right)=a F^{\prime}\left(x_{0}\right)$ .
+
+又由于 $a$  是任意的, 则对 $x \in \mathbb{R}$ ,
+
+$F(x)=F\left(x_{0}\right)+\left(x-x_{0}\right) F^{\prime}\left(x_{0}\right)=\left[F\left(x_{0}\right)-x_{0} F^{\prime}\left(x_{0}\right)\right]+x F^{\prime}\left(x_{0}\right)$,
+
+于是 $F(x)=B+A x$ ,  $A$  和 $B$  均为常数. 故  $f(x)=A=F^{\prime}\left(x_{0}\right).\blacksquare$ 
+
+
+
+---
+  
 ### 2022.8.21
 【题】试求积分
 
