--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,9 +12,38 @@
 
 ## 2022.8
 
-### 2022.8.24(...)
+### 2022.8.25(...)
+【题】 (1997 国际大学生数学竞赛试题) 设  $\left\{a_{n}\right\}_{n=1}^{\infty}$  是一个正实数列, 并且满足  $\displaystyle\lim _{n \rightarrow \infty} a_{n}=0$ . 求  $\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{\infty} \ln \left(\frac{k}{n}+a_{n}\right).\blacktriangleright$ 
+
+
+---
+
+### 2022.8.24
 【题】（1995国际大学生数学竞赛试题）
 求极限$\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln n·\ln (n-k)}.\blacktriangleright$
+
+$\blacktriangleleft$
+
+置 $A_n=\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln n·\ln (n-k)}.\blacktriangleright$
+
+易知$A_n\geq \frac{\ln ^2n}{n}\frac{n-3}{\ln^2n}=1-\frac{3}{n}.$
+
+取 $M$ 满足$2\leq M \leq \frac{n}{2}$，由于$\frac{1}{\ln n ·\ln(n-k)}$在$[2,\frac{n}{2}]$上单调递减并且关于$\frac{n}{2}$对称，所以
+
+$$\begin{aligned}
+A_{n} &=\frac{\ln ^{2} n}{n}\left(\sum_{k=2}^{M}+\sum_{k=M+1}^{n-M-1}+\sum_{k=n-M}^{n-2}\right) \frac{1}{\ln k \cdot \ln (n-k)} \\
+& \leqslant \frac{\ln ^{2} n}{n}\left[2 \cdot \frac{M-1}{\ln 2 \cdot \ln (n-2)}+\frac{n-2 M-1}{\ln M \cdot \ln (n-M)}\right] \\
+& \leqslant \frac{2}{\ln 2} \cdot \frac{M \ln n}{n}+\left(1-\frac{2 M}{n}\right) \frac{\ln n}{\ln M}+O\left(\frac{1}{\ln n}\right)
+\end{aligned}$$
+
+选取  $M=\left[\frac{n}{\ln ^{2} n}\right]+1$ , 我们得到
+
+$$A_{n} \leqslant\left(1-\frac{2}{n \ln ^{2} n}\right) \frac{\ln n}{\ln n-2 \ln \ln n}+O\left(\frac{1}{\ln n}\right) \leqslant 1+O\left(\frac{\ln \ln n}{\ln n}\right)$$
+于是
+
+$\displaystyle\lim _{n \rightarrow \infty} \frac{\ln ^{2} n}{n} \sum_{k=2}^{n-2} \frac{1}{\ln n \cdot \ln (n-k)}=1.\blacksquare$ 
+
+
 
 
 
