--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,8 +12,36 @@
 
 ## 2022.8
 
-### 2022.8.25(...)
+### 2022.8.26(...)
+【题】试证明：
+
+$$\displaystyle\lim _{n \rightarrow \infty}\left[\frac{3 \cdot 7 \cdots \cdots(4 n-1)}{5 \cdot 9 \cdots \cdots(4 n+1)}\right]^{2}(4 n+3)=3 \frac{\int_{0}^{\frac{\pi}{2}} \sin ^{\frac{3}{2}} x \mathrm{~d} x}{\int_{0}^{\frac{\pi}{2}} \sin ^{\frac{1}{2}} x \mathrm{~d} x}.\blacktriangleright$$
+
+
+
+---
+
+### 2022.8.25
 【题】 (1997 国际大学生数学竞赛试题) 设  $\left\{a_{n}\right\}_{n=1}^{\infty}$  是一个正实数列, 并且满足  $\displaystyle\lim _{n \rightarrow \infty} a_{n}=0$ . 求  $\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{\infty} \ln \left(\frac{k}{n}+a_{n}\right).\blacktriangleright$ 
+
+$\blacktriangleleft$
+
+我们知道
+
+$$-1=\int_{0}^{1} \ln x \mathrm{~d} x=\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{n} \ln \left(\frac{k}{n}\right)$$
+
+所以
+
+$$\frac{1}{n} \sum_{k=1}^{n} \ln \left(\frac{k}{n}+a_{n}\right) \geqslant \frac{1}{n} \sum_{k=1}^{n} \ln \left(\frac{k}{n}\right) \rightarrow-1 \quad(n \rightarrow \infty)$$
+
+对于给定的  $\varepsilon>0$ , 存在  $n_{0}$ , 使得任意  $n \geqslant n_{0}$ , 有  $0<a_{n}<\varepsilon$ . 于是
+
+
+$$\frac{1}{n} \sum_{k=1}^{n} \ln \left(\frac{k}{n}+a_{n}\right) \leqslant \frac{1}{n} \sum_{k=1}^{n} \ln \left(\frac{k}{n}+\varepsilon\right)$$
+
+因为  $\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{n} \ln \left(\frac{k}{n}+\varepsilon\right)=\int_{0}^{1} \ln (x+\varepsilon) \mathrm{d} x=\int_{0}^{1+\varepsilon} \ln x \mathrm{~d} x$ , 所以当  $\varepsilon \rightarrow 0$  时, 有
+
+$\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{\infty} \ln \left(\frac{k}{n}+a_{n}\right)=-1.\blacksquare$ 
 
 
 ---
