--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -3,7 +3,7 @@
 # 每日一题（数竞）
 
 - 首发：[Zydragon-x's Blog](https://zydragon-x.github.io/2022/07/10/problems/)
-- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)
+- 参考文献：[前苏下](https://book.douban.com/subject/10828594/)、[Putnam and Beyond](https://book.douban.com/subject/27122401/)、[UMC](https://book.douban.com/subject/32590115/)、[AMM](http://www.mat.uniroma2.it/~tauraso/AMM/amm.html)、[PIRA](https://book.douban.com/subject/4488698/)、[大学生数学竞赛指导全书（数学类）](https://book.douban.com/subject/35010704/)、[IMC](https://www.imc-math.org.uk/)
 - Markdown代码：[GitHub](https://github.com/Zydragon-x/Ncu-math-notes)
 
 
@@ -12,12 +12,43 @@
 
 ## 2022.8
 
-### 2022.8.26(...)
+### 2022.8.27(..)
+【题】 设函数  $f(x)$  在区间  $[0,1]$  上 Riemann 可积, 在  $x=1$  可导,  $f(1)=0, f^{\prime}(1)=a$ , 证明:  $\displaystyle\lim _{n \rightarrow \infty} n^{2} \int_{0}^{1} x^{n} f(x) \mathrm{d} x=-a.\blacktriangleright$ 
+
+
+
+---
+
+### 2022.8.26
 【题】试证明：
 
 $$\displaystyle\lim _{n \rightarrow \infty}\left[\frac{3 \cdot 7 \cdots \cdots(4 n-1)}{5 \cdot 9 \cdots \cdots(4 n+1)}\right]^{2}(4 n+3)=3 \frac{\int_{0}^{\frac{\pi}{2}} \sin ^{\frac{3}{2}} x \mathrm{~d} x}{\int_{0}^{\frac{\pi}{2}} \sin ^{\frac{1}{2}} x \mathrm{~d} x}.\blacktriangleright$$
 
+$\blacktriangleleft$
 
+设  $I_{y}=\int_{0}^{\frac{\pi}{2}} \sin ^{y} x \mathrm{~d} x(y \geqslant 0)$ . 当  $y>2$  时,
+
+$$\begin{aligned}
+I_{y} &=-\int_{0}^{\frac{\pi}{2}} \sin ^{y-1} t \mathrm{~d} \cos t=\int_{0}^{\frac{\pi}{2}}(y-1) \sin ^{y-2} t \cos ^{2} t \mathrm{~d} t \\
+&=(y-1) I_{y-2}-(y-1) I_{y} .
+\end{aligned}$$
+
+因此,  $I_{y}=\frac{y-1}{y} I_{y-2}$ . 于是, 当  $x \geqslant 0, n \in \mathbf{N}$  时,
+
+$$\begin{array}{l}
+I_{2 n+x}=\frac{2 n-1+x}{2 n+x} \cdot \frac{2 n-3+x}{2 n-2+x} \cdots \cdots \frac{1+x}{2+x} \cdot I_{x}, \\
+I_{2 n+x+1}=\frac{2 n+x}{2 n+1+x} \cdot \frac{2 n-2+x}{2 n-1+x} \cdots \frac{2+x}{3+x} \cdot I_{1+x} .
+\end{array}$$
+
+由  $I_{2 n+1+x} \leqslant I_{2 n+x} \leqslant I_{2 n-1+x}$ , 我们有
+
+$$1 \leqslant \frac{I_{2 n+x}}{I_{2 n+1+x}} \leqslant \frac{I_{2 n-1+x}}{I_{2 n+1+x}}=\frac{2 n+1+x}{2 n+x}$$ 
+
+两边取极限，整理后即得
+
+$$\displaystyle\lim _{n \rightarrow \infty}\left[\frac{(1+x) \cdot(3+x) \cdots(2 n-1+x)}{(2+x) \cdot(4+x) \cdots(2 n+x)}\right]^{2}(2 n+1+x)=(1+x) \frac{I_{1+x}}{I_{x}}$$
+
+令  $x=\frac{1}{2}$ , 整理后即得  $\displaystyle\lim _{n \rightarrow \infty}\left[\frac{3 \cdot 7 \cdots(4 n-1)}{5 \cdot 9 \cdots \cdots(4 n+1)}\right]^{2}(4 n+3)=3 \frac{\int_{0}^{\frac{\pi}{2}} \sin ^{\frac{3}{2}} x \mathrm{~d} x}{\int_{0}^{\frac{\pi}{2}} \sin ^{\frac{1}{2}} x \mathrm{~d} x} .\blacksquare$
 
 ---
 
@@ -47,16 +78,16 @@ $\displaystyle\lim _{n \rightarrow \infty} \frac{1}{n} \sum_{k=1}^{\infty} \ln \
 ---
 
 ### 2022.8.24
-【题】（1995国际大学生数学竞赛试题）
-求极限$\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln n·\ln (n-k)}.\blacktriangleright$
+【题】（1994国际大学生数学竞赛试题）
+求极限$\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln k·\ln (n-k)}.\blacktriangleright$
 
 $\blacktriangleleft$
 
-置 $A_n=\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln n·\ln (n-k)}.\blacktriangleright$
+置 $A_n=\displaystyle\lim_{n\to \infty}\frac{\ln^2 n}{n}\sum_{k=2}^{n-2}\frac{1}{\ln k·\ln (n-k)}.\blacktriangleright$
 
 易知$A_n\geq \frac{\ln ^2n}{n}\frac{n-3}{\ln^2n}=1-\frac{3}{n}.$
 
-取 $M$ 满足$2\leq M \leq \frac{n}{2}$，由于$\frac{1}{\ln n ·\ln(n-k)}$在$[2,\frac{n}{2}]$上单调递减并且关于$\frac{n}{2}$对称，所以
+取 $M$ 满足$2\leq M \leq \frac{n}{2}$，由于$\frac{1}{\ln k ·\ln(n-k)}$在$[2,\frac{n}{2}]$上单调递减并且关于$\frac{n}{2}$对称，所以
 
 $$\begin{aligned}
 A_{n} &=\frac{\ln ^{2} n}{n}\left(\sum_{k=2}^{M}+\sum_{k=M+1}^{n-M-1}+\sum_{k=n-M}^{n-2}\right) \frac{1}{\ln k \cdot \ln (n-k)} \\
@@ -69,7 +100,7 @@ A_{n} &=\frac{\ln ^{2} n}{n}\left(\sum_{k=2}^{M}+\sum_{k=M+1}^{n-M-1}+\sum_{k=n-
 $$A_{n} \leqslant\left(1-\frac{2}{n \ln ^{2} n}\right) \frac{\ln n}{\ln n-2 \ln \ln n}+O\left(\frac{1}{\ln n}\right) \leqslant 1+O\left(\frac{\ln \ln n}{\ln n}\right)$$
 于是
 
-$\displaystyle\lim _{n \rightarrow \infty} \frac{\ln ^{2} n}{n} \sum_{k=2}^{n-2} \frac{1}{\ln n \cdot \ln (n-k)}=1.\blacksquare$ 
+$\displaystyle\lim _{n \rightarrow \infty} \frac{\ln ^{2} n}{n} \sum_{k=2}^{n-2} \frac{1}{\ln k \cdot \ln (n-k)}=1.\blacksquare$ 
 
 
 
