--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,8 +12,47 @@
 
 ## 2022.8
 
-### 2022.8.27(..)
+### 2022.8.28(...)
+【题】设  $f(x)$  在  $\left[0, \frac{\pi}{2}\right]$  上连续,  $\int_{0}^{\frac{\pi}{2}} f(x) \sin x d x=\int_{0}^{\frac{\pi}{2}} f(x) \cos x d x=0$ . 试证:  $f(x)$  在  $\left(0, \frac{\pi}{2}\right)$  内至少有两个零点$.\blacktriangleright$
+
+
+
+---
+
+### 2022.8.27
 【题】 设函数  $f(x)$  在区间  $[0,1]$  上 Riemann 可积, 在  $x=1$  可导,  $f(1)=0, f^{\prime}(1)=a$ , 证明:  $\displaystyle\lim _{n \rightarrow \infty} n^{2} \int_{0}^{1} x^{n} f(x) \mathrm{d} x=-a.\blacktriangleright$ 
+
+$\blacktriangleleft$
+
+记  $M=\displaystyle\sup _{n \rightarrow \infty}|f(x)|<+\infty$ , 由 Taylor 展开式
+
+$$f(x)=f(1)+f^{\prime}(1)(x-1)+r(x)=a(x-1)+r(x)$$
+
+因为  $r(x)=o(x-1)$ , 所以, 对于任意  $\varepsilon>0$ , 存在  $\delta \in(0,1)$ , 使得当  $\delta<x \leqslant 1$  时. 有
+$$|r(x)| \leqslant \varepsilon(1-x)$$
+
+于是，我们有
+
+$$\int_{0}^{1} x^{n} f(x) \mathrm{d} x=\int_{0}^{\delta} x^{n} f(x) \mathrm{d} x+\int_{\delta}^{1} a x^{n}(x-1) \mathrm{d} x+\int_{\delta}^{1} x^{n} r(x) \mathrm{d} x$$
+
+记  $R_{1}=\int_{0}^{\delta} x^{n} f(x) \mathrm{d} x, R_{2}=\int_{\delta}^{1} a x^{n}(x-1) \mathrm{d} x, R_{3}=\int_{\delta}^{1} x^{n} r(x) \mathrm{d} x  ，$注意到
+
+$$\begin{array}{c}
+\left|R_{1}\right| \leqslant M \int_{0}^{\delta} x^{n} \mathrm{~d} x=M \cdot \frac{\delta^{n+1}}{n+1}, \\
+R_{2}=\frac{-a}{(n+1)(n+2)}+a\left(\frac{\delta^{n+1}}{n+1}-\frac{\delta^{n+2}}{n+2}\right), \\
+\left|R_{3}\right| \leqslant \int_{\delta}^{1}|r(x)| \mathrm{d} x \leqslant \varepsilon \int_{\delta}^{1} x^{n}(1-x) \mathrm{d} x \leqslant \varepsilon \int_{0}^{1} x^{n}(1-x) \mathrm{d} x=\frac{\varepsilon}{(n+1)(n+2)},
+\end{array}$$
+
+我们有
+
+$$\begin{array}{l}
+\displaystyle\lim _{n \rightarrow \infty}\left|n^{2} R_{1}\right|=0, \\
+\displaystyle\lim _{n \rightarrow \infty}\left|n^{2} R_{2}+a\right|=0, \\
+\displaystyle\limsup _{n \rightarrow \infty}\left|n^{2} R_{3}\right| \leqslant \varepsilon,
+\end{array}$$
+
+所以,  $\displaystyle\limsup _{n \rightarrow \infty}\left|n^{2} \int_{0}^{1} x^{n} f(x) \mathrm{d} x+a\right| \leqslant \varepsilon$ .
+由  $\varepsilon$  的任意性, 即得  $\displaystyle\lim _{n \rightarrow \infty} n^{2} \int_{0}^{1} x^{n} f(x) \mathrm{d} x=-a.\blacksquare$ 
 
 
 
