--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,10 +12,38 @@
 
 ## 2022.8
 
-### 2022.8.28(...)
+
+
+### 2022.8.29(...)
+请从以下题目中任选一题作答
+
+【题$1$】在  $x O y$  平面上重叠地放有边长为  $|a|+|b|$  的两个正方形  $S_{1}$  和  $S_{2}$  (它们的中心位于原点, 边与坐标轴平行), 其中  $a, b$  是使极限  $\displaystyle\lim _{x \rightarrow 0} \frac{e^{x}-\frac{1+a x}{1+b x}}{x^{3}}$  存在的常数. 现将  $S_{2}$  平移到正方形  $S_{t}$ , 其中心点为  $t$ . 设  $S_{1} \bigcap S_{2}$  的面积不小于  $\frac{1}{2}$ , 求动点  $t$  在第一象限内变动时, 其变动范围  $D$  的面积$.\blacktriangleright$
+
+【题$2$】请写出一个以  $\sqrt{2}+\sqrt{3}$  为根的有理系数首一不可约多项式  $f(x)$ , 并证明  $f(x)$  的不可约性$.\blacktriangleright$
+
+
+---
+
+### 2022.8.28
 【题】设  $f(x)$  在  $\left[0, \frac{\pi}{2}\right]$  上连续,  $\int_{0}^{\frac{\pi}{2}} f(x) \sin x d x=\int_{0}^{\frac{\pi}{2}} f(x) \cos x d x=0$ . 试证:  $f(x)$  在  $\left(0, \frac{\pi}{2}\right)$  内至少有两个零点$.\blacktriangleright$
 
+$\blacktriangleleft$
 
+若  $f(x)$  在  $\left(0, \frac{\pi}{2}\right)$  无零点, 因  $f(x)$  连续,  $f(x)$  在  $\left(0, \frac{\pi}{2}\right)$  恒保持同号, 例如  $f(x)>0$  则 得估计  $\int_{0}^{\frac{\pi}{2}} f(x) \sin x d x>0$  与已知条件矛盾, 可见  $\left(0, \frac{\pi}{2}\right)$  中至少有一个零点  $x_{0} \in\left(0, \frac{\pi}{2}\right)$  。 
+
+若$f(x)$  除  $x_{0}$  外在  $\left(0, \frac{\pi}{2}\right)$  内再无零点, 则  $f(x)$  在  $\left(0, x_{0}\right)$  与  $\left(x_{0}, \frac{\pi}{2}\right)$  内分别保持不变号:
+
+$(1)$若  $f$  在此二区间符号相反, 则  $f(x) \sin \left(x-x_{0}\right)$  恒正或恒负。从而
+
+$$\int_{0}^{\frac{\pi}{2}} f(x) \sin \left(x-x_{0}\right) d x>0 \text { 或 }<0$$ 
+
+另一方面, 由已知条件, 有
+
+$$\int_{0}^{\frac{\pi}{2}} f(x) \sin \left(x-x_{0}\right) d x=\cos x_{0} \int_{0}^{\frac{\pi}{2}} f(x) \sin x d x-\sin x_{0} \int_{0}^{\frac{\pi}{2}} f(x) \cos x d x=0,$$
+
+矛盾。
+
+$(2)$若  $f$  在此二区间符号相同, 则  $f(x) \cos \left(x-x_{0}\right)$  恒正或恒负, 同样可推出矛盾。$\blacksquare$
 
 ---
 
