--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,15 +12,80 @@
 
 ## 2022.8
 
+### 2022.8.30(..)
+请从以下题目中任选一题作答
 
+【题$1$】求使不等式 $\left(1+\frac{1}{n}\right)^{n+\alpha} \leq e \leq\left(1+\frac{1}{n}\right)^{n+\beta}$  对所有的自然数  $n$ 都成立的最大的数 $\alpha$ 和最小的数  $\beta$ $.\blacktriangleright$
 
-### 2022.8.29(...)
+【题$2$】
+
+已知 $3$ 阶实矩阵  $A=\left(a_{i j}\right)$  满足条件  $a_{i j}=A_{i j}(i, j=1,2,3)$ , 其中  $A_{i j}$  是  $a_{i j}$  的代数余子式, 且  $a_{33}=-1$ . 求解:
+
+$(1)  |A|$ ;
+
+$(2)$ 方程组  $A\left(\begin{array}{l}x_{1} \\ x_{2} \\ x_{3}\end{array}\right)=\left(\begin{array}{l}0 \\ 0 \\ 1\end{array}\right)$  的解$.\blacktriangleright$
+
+---
+
+### 2022.8.29
 请从以下题目中任选一题作答
 
 【题$1$】在  $x O y$  平面上重叠地放有边长为  $|a|+|b|$  的两个正方形  $S_{1}$  和  $S_{2}$  (它们的中心位于原点, 边与坐标轴平行), 其中  $a, b$  是使极限  $\displaystyle\lim _{x \rightarrow 0} \frac{e^{x}-\frac{1+a x}{1+b x}}{x^{3}}$  存在的常数. 现将  $S_{2}$  平移到正方形  $S_{t}$ , 其中心点为  $t$ . 设  $S_{1} \bigcap S_{2}$  的面积不小于  $\frac{1}{2}$ , 求动点  $t$  在第一象限内变动时, 其变动范围  $D$  的面积$.\blacktriangleright$
 
 【题$2$】请写出一个以  $\sqrt{2}+\sqrt{3}$  为根的有理系数首一不可约多项式  $f(x)$ , 并证明  $f(x)$  的不可约性$.\blacktriangleright$
 
+$\blacktriangleleft$
+
+【题$1$】
+由极限
+
+$$\displaystyle\lim _{x \rightarrow 0} \frac{e^{x}-\frac{1+a x}{1+b x}}{x^{3}}=\lim _{x \rightarrow 0} \frac{e^{x}(1+b x)-(1+a x)}{x^{3}(1+b x)}$$
+
+
+$$\begin{array}{l}
+=\displaystyle\lim _{x \rightarrow 0} \frac{\left(1+x+\frac{1}{2} x^{2}+\frac{1}{6} x^{3}+o\left(x^{3}\right)\right)(1+b x)-(1+a x)}{x^{3}} \\
+=\displaystyle\lim _{x \rightarrow 0} \frac{\left[1+(1+b) x+\left(\frac{1}{2}+b\right) x^{2}+\left(\frac{1}{6}+\frac{b}{2}\right) x^{3}+o\left(x^{3}\right)\right]-(1+a x)}{x^{3}} \\
+=\displaystyle\lim _{x \rightarrow 0} \frac{\left[(1-a+b) x+\left(\frac{1}{2}+b\right) x^{2}+\left(\frac{1}{6}+\frac{b}{2}\right) x^{3}+o\left(x^{3}\right)\right]}{x^{3}}
+\end{array}$$
+
+存在, 可得方程组
+
+$$\left\{\begin{array}{c}
+1-a+b=0, \\
+\frac{1}{2}+b=0 .
+\end{array}\right.$$
+
+解此方程组得  $a=\frac{1}{2}, b=-\frac{1}{2}$ . 于是  $|a|+|b|=1$ . 由于点  $t$  是  $S_{t}$  的中心, 设其坐标为  $(x, y)$ , 则  $S_{1} \cap S_{2}$  的面积=图中矩形  $\mathrm{ABCD}$  的面积  $=|A B| \cdot|A D|$ ,
+其中  $|A B|=|A M|-|M B|=1-x$ , 同理  $|A D|=1-y$  。于是
+
+$$D=\left\{(x, y):(1-x)(1-y) \geq \frac{1}{2}, 0 \leq x \leq \frac{1}{2}, 0 \leq y \leq \frac{1}{2}\right\}$$
+
+故  $D$  的面积为
+
+$$S=\int_{0}^{\frac{1}{2}}\left[1-\frac{1}{2(1-x)}\right] d x=\frac{1}{2}-\frac{1}{2} \ln 2.\blacksquare$$
+
+$\blacktriangleleft$
+
+【题$2$】注 意 到 ,  $f(x)=x^{4}-10 x^{2}+1=\left[\left(x^{2}-1\right)-2 \sqrt{2} x\right]\left[\left(x^{2}-1\right)+2 \sqrt{2} x\right]   =[(x-\sqrt{2})-\sqrt{3}][(x-\sqrt{2})+\sqrt{3}]\left[\left(x^{2}-1\right)+2 \sqrt{2} x\right]$
+
+下证：  $f(x)$  的不可约性.
+
+(1) 若  $f(x)$  能分解成一次与三次有理系数多项式的乘积,
+则  $f(x)$  存在有理根.
+
+而整系数多项式  $f(x)$  的有理根只可能为  $\pm 1$ , 但验证可知  $f(\pm 1) \neq 0$ ,
+
+所以该情形不可能出现.
+
+(2) 若  $f(x)$  能分解成两个 $2$ 次有理系数多项式的乘积, 即  $f(x)=f_{1}(x) f_{2}(x)$ ,
+
+则  $f(x)=f_{1}(x) f_{2}(x)$  自然也可视为实数域上的因式分解,
+
+而  $f(x)=(x-\sqrt{2}-\sqrt{3})(x-\sqrt{2}+\sqrt{3})(x+\sqrt{2}-\sqrt{3})(x+\sqrt{2}+\sqrt{3})$ ,
+
+根据  $f(x)$  在实数域上因式分解的唯一性可知,  $f_{1}(x), f_{2}(x)$  非有理系数多项式, 矛盾!
+
+所以  $f(x)$  在有理数域上不可约$.\blacksquare$
 
 ---
 
