--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,7 +12,26 @@
 
 ## 2022.8
 
-### 2022.8.30(..)
+### 2022.8.31(..)
+请从以下题目中任选一题作答
+
+【题$1$】
+
+设  $f(x)$  在  $[a, b]$  上连续, 在  $(a, b)$  内可导, 且  $f(a) \cdot f(b)>0, f(a) · f\left(\frac{a+b}{2}\right)<0$ , 试证: 至少有一点  $\xi \in(a, b)$ , 使  $f^{\prime}(\xi)=f(\xi).\blacktriangleright$ 
+
+
+【题$2$】
+
+设  $f(x)=2 x(1-x), x \in R$ . 定义  $f^{n}=\overbrace{f \circ \cdots \circ f}^{n}$ 
+
+$(1)$ 求  $\displaystyle\lim _{n \rightarrow \infty} \int_{0}^{1} f^{n}(x) d x$ ;
+
+$(2)$ 计算  $\int_{0}^{1} f^{n}(x) d x.\blacktriangleright$ 
+
+
+---
+
+### 2022.8.30
 请从以下题目中任选一题作答
 
 【题$1$】求使不等式 $\left(1+\frac{1}{n}\right)^{n+\alpha} \leq e \leq\left(1+\frac{1}{n}\right)^{n+\beta}$  对所有的自然数  $n$ 都成立的最大的数 $\alpha$ 和最小的数  $\beta$ $.\blacktriangleright$
@@ -24,6 +43,81 @@
 $(1)  |A|$ ;
 
 $(2)$ 方程组  $A\left(\begin{array}{l}x_{1} \\ x_{2} \\ x_{3}\end{array}\right)=\left(\begin{array}{l}0 \\ 0 \\ 1\end{array}\right)$  的解$.\blacktriangleright$
+
+$\blacktriangleleft$
+
+【题$1$】
+
+已知不等式等价于  $(n+\alpha) \ln \left(1+\frac{1}{n}\right) \leqslant 1 \leqslant(n+\beta) \ln \left(1+\frac{1}{n}\right)$ . 所以  $\alpha \leqslant   \frac{1}{\ln \left(1+\frac{1}{n}\right)}-n \leqslant \beta$ , 令  $f(x)=\frac{1}{\ln (1+x)}-\frac{1}{x}, x \in[0,1]$ , 则  
+
+$$f^{\prime}(x)=-\frac{1}{\ln ^{2}(1+x)}+\frac{1}{x^{2}}=\frac{(1+x) \ln ^{2}(1+x)-x^{2}}{x^{2}(1+x) \ln ^{2}(1+x)}$$
+
+再令  $g(x)=(1+x) \ln ^{2}(1+x)-x^{2}, x \in[0,1]$ , 则  $g(0)=0$ , 且
+
+$$\begin{array}{c}
+g^{\prime}(x)=\ln ^{2}(1+x)+2 \ln (1+x)-2 x, \quad g^{\prime}(0)=0, \\
+g^{\prime \prime}(x)=\frac{2 \ln (1+x)}{1+x}+\frac{2}{1+x}-2=\frac{2[\ln (1+x)-x]}{1+x}<0,
+\end{array}$$
+
+故  $g^{\prime}(x)$  在  $[0,1]$  上严格单调递减, 所以  $g^{\prime}(x)<g^{\prime}(0)=0$ , 同理,  $g(x)$  在  $[0,1]$  上也, 严柺单调递减, 故  $g(x)<g(0)=0$ , 即  $(1+x) \ln ^{2}(1+x)-x^{2}<0$ , 从而  $f^{\prime}(x)<0 \quad(0<   x \leqslant 1)$ , 因此  $f(x)$  在  $(0,1]$  上也严格单调递掝.
+令  $x=\frac{1}{n}$ , 则  $\alpha \leqslant f(x) \leqslant \beta$ ,
+
+$$\begin{aligned}
+\max \alpha=\lim _{x \rightarrow 1^{-}}\left[\frac{1}{\ln (1+x)}-\frac{1}{x}\right]=\frac{1}{\ln 2}-1 \\
+\min \beta &=\lim _{x \rightarrow 0^{+}}\left[\frac{1}{\ln (1+x)}-\frac{1}{x}\right]=\lim _{x \rightarrow 0^{+}} \frac{x-\ln (1+x)}{x \ln (1+x)}=\lim _{x \rightarrow 0^{+}} \frac{1}{\ln (1+x)+\frac{1}{1+x}} \\
+&=\lim _{x \rightarrow 0^{+}} \frac{1}{1+\ln (1+x)+1}=\frac{1}{2}
+\end{aligned}$$
+
+因此, 使不等式对所有的自然数  $n$  都成立的最大的数  $\alpha$  为  $\frac{1}{\ln 2}-1$ , 最小的数  $\beta$  为  $\frac{1}{2}.\blacksquare$ 
+
+$\blacktriangleleft$
+
+【题$2$】
+
+因  $a_{i j}=A_{i j}$ , 则  $\boldsymbol{A}^{\prime}=\boldsymbol{A}^{*}$ , 且  $\boldsymbol{A} \boldsymbol{A}^{\prime}=\boldsymbol{A} \boldsymbol{A}^{*}=|\boldsymbol{A}| \boldsymbol{E}$ , 两边取行列式, 得
+
+$$|\boldsymbol{A}|^{2}=|\boldsymbol{A}|^{3},|\boldsymbol{A}|^{2}(|\boldsymbol{A}|-1)=0$$
+
+从而
+
+$$|\boldsymbol{A}|=0 \text { 或 }|\boldsymbol{A}|=1$$
+
+把  $|A|$  按第 3 行展开, 得
+
+$$|\boldsymbol{A}|=a_{31} A_{31}+a_{32} A_{32}+a_{33} A_{33}=a_{31}^{2}+a_{32}^{2}+a_{33}^{2}$$
+
+因  $a_{33}=-1$ , 则  $|\boldsymbol{A}| \neq 0$ , 于是  $|\boldsymbol{A}|=1$ , 且  $a_{31}=a_{32}=0$ ; 由  $|\boldsymbol{A}|=1$  可知,  $\boldsymbol{A}^{-1}=   \boldsymbol{A}^{\prime}$ , 则
+
+$$\boldsymbol{A}\left(\begin{array}{l}
+x_{1} \\
+x_{2} \\
+x_{3}
+\end{array}\right)=\left(\begin{array}{l}
+0 \\
+0 \\
+1
+\end{array}\right),\left(\begin{array}{l}
+x_{1} \\
+x_{2} \\
+x_{3}
+\end{array}\right)=\boldsymbol{A}^{\prime}\left(\begin{array}{l}
+0 \\
+0 \\
+1
+\end{array}\right)$$
+
+
+$$\left(\begin{array}{l}
+x_{1} \\
+x_{2} \\
+x_{3}
+\end{array}\right)=\left(\begin{array}{l}
+a_{31} \\
+a_{32} \\
+a_{33}
+\end{array}\right)$$
+
+所以,  $x_{1}=a_{31}=0, x_{2}=a_{32}=0, x_{3}=a_{33}=-1.\blacksquare$ 
 
 ---
 
