--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -10,9 +10,24 @@
 ---
 
 
+## 2022.9
+
+### 2022.9.1(...)
+请从以下题目中任选一题作答
+
+【题$1$】
+
+设  $f(x)$ 在 $[1,+\infty)$  一致连续, 证明  $\frac{f(x)}{x}$  在 $[1,+\infty)$  有界 $.\blacktriangleright$
+
+【题$2$】
+
+设  $f$  在  $[0,1]$  上有三阶连续导数,  $f(0)=1, f(1)=2, f^{\prime}\left(\frac{1}{2}\right)=0$ , 证明: 至少存在一点  $\xi \in(0,1)$ , 使得  $\left|f^{\prime \prime \prime}(\xi)\right| \geqslant 24.\blacktriangleright$ 
+
+---
+
 ## 2022.8
 
-### 2022.8.31(..)
+### 2022.8.31
 请从以下题目中任选一题作答
 
 【题$1$】
@@ -28,6 +43,39 @@ $(1)$ 求  $\displaystyle\lim _{n \rightarrow \infty} \int_{0}^{1} f^{n}(x) d x$
 
 $(2)$ 计算  $\int_{0}^{1} f^{n}(x) d x.\blacktriangleright$ 
 
+
+$\blacktriangleleft$
+
+【题$1$】
+
+设  $F(x)=f(a) \mathrm{e}^{-x} f(x)$ , 则
+
+$$\begin{aligned}
+F(a) &=f^{2}(a) \mathrm{e}^{-a}>0, \\
+F\left(\frac{a+b}{2}\right) &=f(a) f\left(\frac{a+b}{2}\right) \mathrm{e}^{\frac{a+b}{2}}<0, \\
+F(b) &=f(a) f(b) \mathrm{e}^{-b}>0 .
+\end{aligned}$$
+
+所以由零点定理知, 存在  $\xi_{1} \in\left(a, \frac{a+b}{2}\right), \xi_{2} \in\left(\frac{a+b}{2}, b\right)$ , 使  $F\left(\xi_{1}\right)=0, F\left(\xi_{2}\right)=0$ , 再在区间  $\left[\xi_{1}, \xi_{2}\right]$  上使用 $\mathbf{Rolle}$ 定理即得结果$.\blacksquare$
+
+$\blacktriangleleft$
+
+【题$2$】
+
+$（1）$ 取定  $x=x_{0} \in(0,1)$ . 令  $x_{n}=f^{n}\left(x_{0}\right), n=1,2, \cdots$  则得到  $x_{1} \in\left(0, \frac{1}{2}\right], x_{1} \leq f\left(x_{1}\right) \leq \frac{1}{2}$ , 进一 步利用数学归纳法可得到  $x_{n} \leq f\left(x_{n}\right) \leq \frac{1}{2}$ , 这样数列  $\left\{x_{n}\right\}$  为一个有界单调非减的数列, 从而极 限存在, 假设  $\lim _{n \rightarrow \infty} x_{n}=l$ , 并且  $\left\{x_{n}\right\}$  满足  $x_{n+1}=2 x_{n}\left(1-x_{n}\right)$ , 上式两边取极限得到  $l=2 l(1-l)$ , 从而  $l=0$  或者  $l=\frac{1}{2}$ , 利用  $\left\{x_{n}\right\}$  为一个单调非减的数列得到  $l=\frac{1}{2}$ . 从而利用单调收敛定理可以得到  $\lim _{n \rightarrow \infty} \int_{0}^{1} f^{n}(x) d x=\frac{1}{2}$
+
+$（2）$因为  $f(x)=2 x(1-x)=\frac{1}{2}-2\left(x-\frac{1}{2}\right)^{2}$ , 利用数学归纳法可证  $f^{n}(x)=\frac{1}{2}-2^{2^{n}-1}\left(x-\frac{1}{2}\right)^{2^{n}}$ 
+
+假设上式对于  $n=k$  成立, 下证
+
+$$f^{k+1}(x)=f^{k}(f(x))=\frac{1}{2}-2^{2^{k}-1}\left(\left(\frac{1}{2}-2\left(x-\frac{1}{2}\right)^{2}\right)-\frac{1}{2}\right)^{2^{k}}$$
+
+
+$$=\frac{1}{2}-2^{2^{k}-1}\left(-2\left(x-\frac{1}{2}\right)^{2}\right)^{2^{k}}=\frac{1}{2}-2^{2^{k+1}-1}\left(x-\frac{1}{2}\right)^{2^{k+1}}$$
+
+从而可以计算得到  
+
+$$\int_{0}^{1} f^{n}(x) d x=\left.\left[\frac{1}{2} x-\frac{2^{2^{n}-1}}{2^{n}+1}\left(x-\frac{1}{2}\right)^{2^{n}+1}\right]\right|_{0} ^{1}=\frac{1}{2}-\frac{1}{2\left(2^{n}+1\right)}.\blacksquare$$ 
 
 ---
 
@@ -63,7 +111,7 @@ g^{\prime \prime}(x)=\frac{2 \ln (1+x)}{1+x}+\frac{2}{1+x}-2=\frac{2[\ln (1+x)-x
 令  $x=\frac{1}{n}$ , 则  $\alpha \leqslant f(x) \leqslant \beta$ ,
 
 $$\begin{aligned}
-\max \alpha=\lim _{x \rightarrow 1^{-}}\left[\frac{1}{\ln (1+x)}-\frac{1}{x}\right]=\frac{1}{\ln 2}-1 \\
+\max \alpha&=\lim _{x \rightarrow 1^{-}}\left[\frac{1}{\ln (1+x)}-\frac{1}{x}\right]=\frac{1}{\ln 2}-1 \\
 \min \beta &=\lim _{x \rightarrow 0^{+}}\left[\frac{1}{\ln (1+x)}-\frac{1}{x}\right]=\lim _{x \rightarrow 0^{+}} \frac{x-\ln (1+x)}{x \ln (1+x)}=\lim _{x \rightarrow 0^{+}} \frac{1}{\ln (1+x)+\frac{1}{1+x}} \\
 &=\lim _{x \rightarrow 0^{+}} \frac{1}{1+\ln (1+x)+1}=\frac{1}{2}
 \end{aligned}$$
