--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,16 +12,64 @@
 
 ## 2022.9
 
-### 2022.9.1(...)
+### 2022.9.2(..)
+请从以下题目中任选一题作答
+
+【题$1$】
+
+设  $f(x)$  是二次可微的函数, 满足  $f(0)=1, f^{\prime}(0)=0$ , 且对任意的  $x \geqslant 0$  有
+
+$f^{\prime \prime}(x)-5 f^{\prime}(x)+6 f(x) \geqslant 0$ .
+
+证明：对每个  $x \geqslant 0$ , 都有  $f(x) \geqslant 3 \mathrm{e}^{2 x}-2 \mathrm{e}^{3 x}.\blacktriangleright$ 
+
+【题$2$】
+
+$f(x)$  在  $a$  点可导, 且  $\left\{x_{n}\right\}$  单调递增趋于  $a$,$\left\{y_{n}\right\}$  单调递减趋于  $a$ , 证明:
+
+$\displaystyle\lim _{n \rightarrow \infty} \frac{f\left(y_{n}\right)-f\left(x_{n}\right)}{y_{n}-x_{n}}=f^{\prime}(a).\blacktriangleright$
+
+
+---
+
+### 2022.9.1
 请从以下题目中任选一题作答
 
 【题$1$】
 
 设  $f(x)$ 在 $[1,+\infty)$  一致连续, 证明  $\frac{f(x)}{x}$  在 $[1,+\infty)$  有界 $.\blacktriangleright$
 
+
+
 【题$2$】
 
 设  $f$  在  $[0,1]$  上有三阶连续导数,  $f(0)=1, f(1)=2, f^{\prime}\left(\frac{1}{2}\right)=0$ , 证明: 至少存在一点  $\xi \in(0,1)$ , 使得  $\left|f^{\prime \prime \prime}(\xi)\right| \geqslant 24.\blacktriangleright$ 
+
+
+$\blacktriangleleft$
+
+【题$1$】
+
+由于  $f(x)$  在  $[1,+\infty)$  一致连续, 对于  $\varepsilon_{0}=1$ , 存在  $\delta_{0}>0$  任意的  $x_{1}, x_{2} \in[1,+\infty)  , \left|x_{1}-x_{2}\right| \leq \delta_{0}$ , 有  $\left|f\left(x_{1}\right)-f\left(x_{2}\right)\right| \leq \varepsilon_{0}=1$ 
+对于任意的  $x \in[1,+\infty)$ , 存在整数  $n$ , 使得  $n \leq \frac{x-1}{\delta_{0}}<n+1$  或  $1+n \delta_{0} \leq x<1+(n+1) \delta_{0}$ ,  
+
+$\left|\frac{f(x)-f(1)}{x}\right| 
+\leq \frac{\left|f\left(1+\delta_{0}\right)-f(1)\right|+\left|f\left(1+2 \delta_{0}\right)-f\left(1+\delta_{0}\right)\right|+\cdots+\left|f\left(1+n \delta_{0}\right)-f\left(1+(n-1) \delta_{0}\right)\right|+\left|f(x)-f\left(1+n \delta_{0}\right)\right|}{x}$ 
+$\leq \frac{n+1}{x} \leq \frac{\frac{x-1}{\delta_{0}}+1}{x} \leq \frac{1}{\delta_{0}}+1 
+\left|\frac{f(x)}{x}\right| \leq \frac{|f(x)-f(1)|+f(1)}{x} \leq \frac{1}{\delta_{0}}+1+|f(1)|.\blacksquare$ 
+
+$\blacktriangleleft$
+
+【题$2$】
+
+利用 $Taylor$ 公式把  $f(0), f(1)$  在点  $x=\frac{1}{2}$  处展开得到
+
+$$\begin{array}{l}
+f(0)=f\left(\frac{1}{2}\right)+f^{\prime}\left(\frac{1}{2}\right)\left(0-\frac{1}{2}\right)+\frac{1}{2} f^{\prime \prime}\left(\frac{1}{2}\right)\left(0-\frac{1}{2}\right)^{2}+\frac{1}{6} f^{\prime \prime \prime}\left(\xi_{1}\right)\left(0-\frac{1}{2}\right)^{3}, \quad \xi_{1} \in\left(0, \frac{1}{2}\right), \\
+f(1)=f\left(\frac{1}{2}\right)+f^{\prime}\left(\frac{1}{2}\right)\left(1-\frac{1}{2}\right)+\frac{1}{2} f^{\prime \prime}\left(\frac{1}{2}\right)\left(1-\frac{1}{2}\right)^{2}+\frac{1}{6} f^{\prime \prime \prime}\left(\xi_{2}\right)\left(1-\frac{1}{2}\right)^{3}, \quad \xi_{2} \in\left(\frac{1}{2}, 1\right) .
+\end{array}$$
+
+两式相减并注意到  $f(0)=1, f(1)=2, f^{\prime}\left(\frac{1}{2}\right)=0$ , 就有  $f^{\prime \prime \prime}\left(\xi_{1}\right)+f^{\prime \prime \prime}\left(\xi_{2}\right)=48$ , 这表明至少存在一点  $\xi \in(0,1)$ , 使得  $\left|f^{\prime \prime \prime}(\xi)\right| \geqslant 24.\blacksquare$ 
 
 ---
 
