--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,7 +12,22 @@
 
 ## 2022.9
 
-### 2022.9.2(..)
+### 2022.9.3(...)
+请从以下题目中任选一题作答
+
+【题$1$】
+
+考虑  $\int_{0}^{1} \frac{\sin \left(x+\frac{1}{x}\right)}{x^{\alpha}} \mathrm{d} x$  与  $\int_{1}^{+\infty} \frac{\sin \left(x+\frac{1}{x}\right)}{x^{\alpha}} \mathrm{d} x$  的敛散性$.\blacktriangleright$ 
+
+【题$2$】
+
+假设  $f_{1}(x)$  与  $f_{2}(x)$  为次数不超过 $3$ 的首项系数为 $1$ 的互异多项式, 假设  $x^{4}+x^{2}+1$  整除  $f_{1}\left(x^{3}\right)+x^{4} f_{2}\left(x^{3}\right)$ , 试求  $f_{1}(x)$  与  $f_{2}(x)$  的最大公因式$.\blacktriangleright$
+
+
+
+---
+
+### 2022.9.2
 请从以下题目中任选一题作答
 
 【题$1$】
@@ -28,6 +43,32 @@ $f^{\prime \prime}(x)-5 f^{\prime}(x)+6 f(x) \geqslant 0$ .
 $f(x)$  在  $a$  点可导, 且  $\left\{x_{n}\right\}$  单调递增趋于  $a$,$\left\{y_{n}\right\}$  单调递减趋于  $a$ , 证明:
 
 $\displaystyle\lim _{n \rightarrow \infty} \frac{f\left(y_{n}\right)-f\left(x_{n}\right)}{y_{n}-x_{n}}=f^{\prime}(a).\blacktriangleright$
+
+$\blacktriangleleft$
+
+【题$1$】
+
+首先  $\left[f^{\prime \prime}(x)-2 f^{\prime}(x)\right]-3\left[f^{\prime}(x)-2 f(x)\right] \geqslant 0$ , 令  $g(x)=f^{\prime}(x)-2 f(x)$ , 则  $g^{\prime}(x)-3 g(x) \geqslant 0$ , 因此  $\left(g(x) \mathrm{e}^{-3 x}\right)^{\prime} \geqslant 0$ , 所以
+
+$g(x) \mathrm{e}^{-3 x} \geqslant g(0)=-2 \text {, 或者 } f^{\prime}(x)-2 f(x) \geqslant-2 \mathrm{e}^{3 x}$
+
+进一步, 有  $\left(f(x) \mathrm{e}^{-2 x}\right)^{\prime} \geqslant-2 \mathrm{e}^{x}$ , 即  $\left(f(x) \mathrm{e}^{-2 x}+2 \mathrm{e}^{x}\right)^{\prime} \geqslant 0$  ， 所以  $f(x) \mathrm{e}^{-2 x}+2 \mathrm{e}^{x} \geqslant f(0)+2=3$ , 即  $f(x) \geqslant 3 \mathrm{e}^{2 x}-2 \mathrm{e}^{3 x}.\blacksquare$ 
+
+$\blacktriangleleft$
+
+【题$2$】
+
+$$\begin{aligned}
+\frac{f\left(y_{n}\right)-f\left(x_{n}\right)}{y_{n}-x_{n}} &=\frac{f\left(y_{n}\right)-f(a)+f(a)-f\left(x_{n}\right)}{y_{n}-x_{n}} \\
+&=\lambda_{n} \frac{f\left(y_{n}\right)-f(a)}{y_{n}-a}+\left(1-\lambda_{n}\right) \frac{f\left(x_{n}\right)-f(a)}{x_{n}-a},
+\end{aligned}$$
+
+其中  $\lambda_{n}=\frac{y_{n}-a}{y_{n}-x_{n}}$ , 易知  $\forall \varepsilon>0, \exists N \in \mathbf{N}_{+}$ , 当  $n>\mathbf{N}$  时,
+
+$$\begin{aligned}
+\left|\frac{f\left(y_{n}\right)-f\left(x_{n}\right)}{y_{n}-x_{n}}-f^{\prime}(a)\right| & \leqslant \lambda_{n}\left|\frac{f\left(y_{n}\right)-f(a)}{y_{n}-a}-f^{\prime}(a)\right|+\left(1-\lambda_{n}\right)\left|\frac{f\left(x_{n}\right)-f(a)}{x_{n}-a}-f^{\prime}(a)\right| \\
+&<\lambda_{n} \varepsilon+\left(1-\lambda_{n}\right) \varepsilon=\varepsilon .\blacksquare
+\end{aligned}$$
 
 
 ---
