--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,7 +12,21 @@
 
 ## 2022.9
 
-### 2022.9.3(...)
+### 2022.9.4
+请从以下题目中任选一题作答
+
+【题$1$】
+
+设  $a_{n}=\int_{0}^{\frac{\pi}{2}} t\left|\frac{\sin n t}{\sin t}\right|^{3} \mathrm{~d} t$ , 证明  $\displaystyle\sum_{n=1}^{\infty} \frac{1}{a_{n}}$  发散$.\blacktriangleright$
+
+【题$2$】
+
+证明:
+非常数的一元多项式函数不是周期函数$.\blacktriangleright$
+
+---
+
+### 2022.9.3
 请从以下题目中任选一题作答
 
 【题$1$】
@@ -22,6 +36,33 @@
 【题$2$】
 
 假设  $f_{1}(x)$  与  $f_{2}(x)$  为次数不超过 $3$ 的首项系数为 $1$ 的互异多项式, 假设  $x^{4}+x^{2}+1$  整除  $f_{1}\left(x^{3}\right)+x^{4} f_{2}\left(x^{3}\right)$ , 试求  $f_{1}(x)$  与  $f_{2}(x)$  的最大公因式$.\blacktriangleright$
+
+$\blacktriangleleft$
+
+【题$2$】
+
+由于  $x^{4}+x^{2}+1=\left(x^{2}+1\right)^{2}-x^{2}=\left(x^{2}+x+1\right)\left(x^{2}-x+1\right)$ . 这里假设它的四个根分别为  $\omega_{1}, \omega_{2}, \varepsilon_{1}, \varepsilon_{2}$  且
+
+$$\omega_{1}=\frac{-1+\sqrt{3} \mathrm{i}}{2}, \quad \omega_{2}=\frac{-1-\sqrt{3} \mathrm{i}}{2}, \quad \varepsilon_{1}=\frac{1+\sqrt{3} \mathrm{i}}{2}, \quad \varepsilon_{2}=\frac{1-\sqrt{3} \mathrm{i}}{2} .$$
+
+令  $f_{1}\left(x^{3}\right)+x^{4} f_{2}\left(x^{3}\right)=\left(x^{4}+x^{2}+1\right) g(x)$ , 于是有方程组
+
+$$\left\{\begin{array} { l } 
+{ f _ { 1 } ( 1 ) + \omega _ { 1 } f _ { 2 } ( 1 ) = 0 , } \\
+{ f _ { 1 } ( 1 ) + \omega _ { 2 } f _ { 2 } ( 1 ) = 0 }
+\end{array} \quad \text { 与 } \left\{\begin{array}{l}
+f_{1}(-1)-\varepsilon_{1} f_{2}(-1)=0, \\
+f_{1}(-1)-\varepsilon_{2} f_{2}(-1)=0,
+\end{array}\right.\right.$$
+
+解方程组得
+
+$$f_{1}(1)=f_{2}(1)=0, \quad f_{1}(-1)=f_{2}(-1)=0,$$
+
+于是有  $(x+1)(x-1)\left|f_{1}(x),(x+1)(x-1)\right| f_{2}(x)$ .
+而  $f_{1}(x)$  与  $f_{2}(x)$  为互异的次数不超过 $3$ 的首项系数为 $1$ 的多项式, 所以有
+
+$$\left(f_{1}(x), f_{2}(x)\right)=x^{2}-1.\blacksquare$$
 
 
 
