--- a/每日一题（数竞）.md
+++ b/每日一题（数竞）.md
@@ -12,6 +12,22 @@
 
 ## 2022.9
 
+### 2022.9.5
+请从以下题目中任选一题作答
+
+【题$1$】
+
+证明:  $\left(x^{2}+x+1\right) \mid\left(x^{3 m}+x^{3 n+1}+x^{3 p+2}\right.  )$ (其中  $m, n, p$  是三个任意的正整数) $.\blacktriangleright$
+
+【题$2$】
+
+设  $a>1$ , 求无穷级数的和
+
+$s=\displaystyle\sum_{n=0}^{\infty} \frac{2^{n}}{a^{2^{n}}+1} .\blacktriangleright$
+
+
+---
+
 ### 2022.9.4
 请从以下题目中任选一题作答
 
@@ -23,6 +39,26 @@
 
 证明:
 非常数的一元多项式函数不是周期函数$.\blacktriangleright$
+
+$\blacktriangleleft$
+
+【题$1$】
+
+$$\int_{0}^{\frac{\pi}{2}} t\left|\frac{\sin n t}{\sin t}\right|^{3} \mathrm{~d} t=\int_{0}^{\frac{\pi}{n}} t\left|\frac{\sin n t}{\sin t}\right|^{3} \mathrm{~d} t+\int_{\frac{\pi}{n}}^{\frac{\pi}{2}} t\left|\frac{\sin n t}{\sin t}\right|^{3} \mathrm{~d} t=I_{1}+I_{2} ,$$
+
+$$I_{1}=\int_{0}^{\frac{\pi}{n}} t\left|\frac{\sin n t}{\sin t}\right|^{3} \mathrm{~d} t<n^{3} \int_{0}^{\frac{\pi}{n}} t \mathrm{~d} t=\frac{\pi^{2} n}{2},$$
+
+
+
+$$I_{2}=\int_{\frac{\pi}{n}}^{\frac{\pi}{2}} t\left|\frac{\sin n t}{\sin t}\right|^{3} \mathrm{~d} t<\int_{\frac{\pi}{n}}^{\frac{\pi}{2}} t\left(\frac{\pi}{2 t}\right)^{3} \mathrm{~d} t=-\frac{\pi^{3}}{8} \int_{\frac{\pi}{n}}^{\frac{\pi}{2}} \mathrm{~d}\left(\frac{1}{t}\right)=\frac{\pi^{3}}{8}\left(\frac{n}{\pi}-\frac{2}{\pi}\right)<\frac{\pi^{2} n}{8}$$
+
+因此,  $\frac{1}{a_{n}}>\frac{1}{\pi^{2} n}$ , 由此得到  $\displaystyle\sum_{n=1}^{\infty} \frac{1}{a_{n}}$  发散$.\blacksquare$
+
+$\blacktriangleleft$
+
+【题$2$】
+
+假设  $\operatorname{deg}(f(x)) \geqslant 1$ . 若存在常数  $c \neq 0$ , 使得对任意的  $x$ , 均有  $f(x+c)=   f(x)$  成立. 设  $\alpha$  是  $f(x)$  的 $1$ 个根, 则  $\alpha+c, \alpha+2 c, \alpha+3 c, \cdots$  都是  $f(x)$  的根. 但  $f(x)$  的根的个数不超过  $\operatorname{deg}(f(x))$ , 因此存在不同的正整数  $s, t$ , 使得  $\alpha+s c=   \alpha+t c$ , 即  $(s-t) c=0 \Rightarrow c=0$ , 矛盾. 故结论成立$.\blacksquare$
 
 ---
 
